<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_wj_podft_jisi"
        tools:context=".WjPodftJisiActivity"
        android:id="@+id/clPodFTJisi"
        android:animateLayoutChanges="true">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:id="@+id/linearLayout33">

        <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25">

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/textView127"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:gravity="end"
                        android:text="기간"
                        android:textColor="@android:color/black"
                        android:textSize="14dp" />

                <EditText
                    android:id="@+id/etxtJisiDateFr"
                    style="@style/EditDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@android:drawable/editbox_background_normal"
                    android:ems="10"
                    android:hint="20190701"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/textView128"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="~"
                        android:textColor="@android:color/black"
                        android:textSize="14dp" />

                <EditText
                    android:id="@+id/etxtJisiDateTo"
                    style="@style/EditDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ems="10"
                    android:hint="default : X"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    tools:ignore="TouchTargetSizeCheck" />
            </TableRow>

        </TableLayout>

        <CheckedTextView
                android:id="@+id/chkJisiCancel"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMark="@android:drawable/checkbox_off_background"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:text="취소포함"
                android:textAlignment="viewEnd"
                android:textSize="14dp" />

        <CheckedTextView
                android:id="@+id/chkJisiOut"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkMark="@android:drawable/checkbox_off_background"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:text="출고포함"
                android:textAlignment="viewEnd"
                android:textSize="14dp" />

        <RadioGroup
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20">

            <RadioButton
                android:id="@+id/rbtnPodFT"
                style="@android:style/Widget.Holo.Light.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/podftJisiItemGbnPodft"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rbtnAnkoris"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/podftJisiItemGbnAnkoris"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>

        <Button
            android:id="@+id/btnJisiSearch"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="15"
            android:text="@android:string/search_go"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout33"
            android:id="@+id/llJisiButtons"
            android:layout_marginTop="2dp"
            >

        <TextView
                android:text="@string/podftJisiLocSelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView142"
                android:layout_weight="0.5"
                android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/btnJisiSeoul"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:text="@string/podftJisiLocSeoul"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView145"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnJisiGangnam"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:text="@string/podftJisiLocGangnam"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView53"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnJisiBusan"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:text="@string/podftJisiLocBusan"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView147"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnJisiDaegu"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:text="@string/podftJisiLocDaegu"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <TableLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tableLayout"
            android:background="@drawable/search_background_slim"
            android:gravity="center"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/llJisiButtons"
            android:layout_marginTop="2dp">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="체크"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView129"
                    style="@style/SearchMenuTheme"
                    android:layout_weight="5"
                    android:textSize="13dp"/>

            <TextView
                    android:text="근시"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView133"
                    style="@style/SearchMenuTheme"
                    android:layout_weight="10"
                    android:textSize="13dp"/>

            <TextView
                    android:text="난시"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView134"
                    style="@style/SearchMenuTheme"
                    android:layout_weight="6"
                    android:textSize="13dp"/>

            <TextView
                    android:text="재고"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView135"
                    style="@style/SearchMenuTheme"
                    android:layout_weight="8"
                    android:textSize="13dp"/>

            <TextView
                    android:text="SB"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView136"
                    style="@style/SearchMenuTheme"
                    android:layout_weight="5"
                    android:textSize="13dp"/>

            <TextView
                    android:text="주문"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView137"
                    style="@style/SearchMenuTheme"
                    android:layout_weight="5"
                    android:textSize="13dp"/>

            <TextView
                    android:text="InJ"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView139"
                    style="@style/SearchMenuTheme"
                    android:layout_weight="7"
                    android:textSize="13dp"/>

            <TextView
                    android:text="수술일"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView140"
                    style="@style/SearchMenuTheme"
                    android:layout_weight="15"
                    android:textSize="13dp"/>

            <TextView
                    android:text="출고일"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView141"
                    style="@style/SearchMenuTheme"
                    android:layout_weight="9"
                    android:textSize="13dp"/>

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:id="@+id/textView146"
                    android:background="@drawable/dot"
                    android:layout_weight="1"/>
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="구분"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView130"
                    style="@style/SearchMenuTheme"
                    android:textSize="13dp"
                    android:layout_weight="5"/>

            <TextView
                    android:text="환자명"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView132"
                    style="@style/SearchMenuTheme"
                    android:textSize="13dp"
                    android:layout_weight="12"/>

            <TextView
                    android:text="비고"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView138"
                    style="@style/SearchMenuTheme"
                    android:textSize="13dp"
                    android:layout_weight="27"/>

            <TextView
                    android:text="출고지시일"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView143"
                    style="@style/SearchMenuTheme"
                    android:textSize="13dp"
                    android:layout_weight="15"/>

            <TextView
                    android:text="취소일"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView144"
                    style="@style/SearchMenuTheme"
                    android:textSize="13dp"
                    android:layout_weight="9"/>

        </TableRow>

    </TableLayout>

    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/rvPodftJisi"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout">

    </android.support.v7.widget.RecyclerView>
</android.support.constraint.ConstraintLayout>